re: #44 fixing frontpage layout problem caused by block-views-agenda-block_1

--- a/css/style.css
+++ b/css/style.css
@@ -485,9 +485,10 @@ div.view-jualan div.views-row-last div.read-more {
     font-style: italic;
     margin-bottom: 10px;
     text-align: right; }
-div.view-display-id-block_1 div.view-content {
+    
+#block-views-agenda-block_1 div.view-display-id-block_1 div.view-content {
   padding: 0 20px 20px; }
-div.view-display-id-block_1 div.views-row{
+#block-views-agenda-block_1 div.view-display-id-block_1 div.views-row{
   margin: 0;
   padding: 5px; }
 
